Hover animation and team page scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,46 @@
   -webkit-backdrop-filter: blur(9px); */
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+
+  li,
+  a {
+    position: relative;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.2rem;
+    transition: all ease 200ms;
+  }
+
+  ul > li > a:hover {
+    color: #fe8d32;
+  }
+
+  /* a {
+    margin: 0;
+    padding: 0;
+  } */
+
+  ul > li > a:after {
+    content: "";
+    position: absolute;
+    bottom: 0rem;
+    left: 50%;
+    width: 0%;
+    height: 2px;
+    background-color: #fe8d32;
+    transition: width 0.3s ease-out;
+  }
+
+  ul > li > a:hover:after {
+    transform: translateX(-50%);
+    width: 90%;
+  }
+
+  ul > li > a:not(:hover):after {
+    opacity: 0;
+  }
 }
 /* Footer */
 .contact h6 {
@@ -373,4 +413,30 @@
 .self-newsletter:hover {
   transform: perspective(1000px) rotateY(0deg);
   box-shadow: 8px 8px 15px 0px #ff8c32;
+}
+@media (pointer: fine) {
+  ::-webkit-scrollbar-button {
+    height: 0;
+    width: 0;
+  }
+}
+
+@media (pointer: fine) {
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+    height: 12px;
+    width: 12px;
+  }
+}
+
+@media (pointer: fine) {
+  ::-webkit-scrollbar-thumb {
+    background: content-box currentColor;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    color: #dadce0;
+    min-height: 48px;
+    min-width: 48px;
+  }
 }
